<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_motors</name>
  <version>1.0.0</version>
  <description>
    Gazebo-ROS plugin for electro-mechanically accurate DC motor simulation.
  </description>

  <maintainer email="marton@neorobot.hu">nilseuropa</maintainer>
  <author>Marton Juhasz, Gergely Gyebroszki</author>

  <license>NO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_dev</exec_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nodelet</depend>
  <depend>angles</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rosconsole</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>diagnostic_updater</depend>
  <depend>std_msgs</depend>

</package>
